tests/samples/negative/resources/move_borrow_aggregate_alias_after_move.ax
module move_borrow_aggregate_alias_after_move;

fn consume[T](value: T) -> void {
}

fn inspect[T](value: &T) -> void {
}

struct BorrowPair[T] {
    borrowed: &T;
    tag: i32;
}

fn duplicate[T](value: T) -> void {
    let pair: BorrowPair[T] = BorrowPair[T] { borrowed: &value, tag: 1 };
    consume(value);
    inspect(pair.borrowed);
}

fn main() -> i32 {
    return 0;
}
